# elemaudio-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  JIMMYS-WORKFLOW.md  LICENSE  NEXT-SESSION-START-HERE.md  NOTICE  POSSIBLE-NEXT-STEPS.md  README.md  STATUS.md  build.rs  index.html  package-lock.json
.github/workflows/: publish-docs.yml
docs/: FrameLib-FFT-Integration.md  GRAPH-EXPORT.md  How-We-Added-BoxSum.md  How-We-Added-ExtraConvolve.md  How-We-Added-FreqShift.md  How-We-Added-IirHilbert.md  How-We-Added-StrideDelay.md  How-We-Added-Vocoder.md  JS-TS-AUTHORING-PLAN.md  Spectral-Convolver-FrameLib-Design.md  crates.js  help.html  settings.html  src-files.js
docs/elemaudio_rs/: all.html  enum.Error.html  enum.Instruction.html  enum.Resource.html  index.html  sidebar-items.js  struct.AudioBuffer.html  struct.AudioRingBuffer.html  struct.InstructionBatch.html  struct.ResourceId.html  struct.ResourceManager.html  type.NodeId.html  (+3 more)
elemaudio-rs-macros/: Cargo.toml
elemaudio_rs/: enum.Error.html  enum.Instruction.html  enum.Resource.html  sidebar-items.js  struct.AudioRingBuffer.html  struct.InstructionBatch.html  struct.ResourceId.html  struct.ResourceManager.html  type.NodeId.html  type.Result.html
examples/: README.md  frontend-graph.ts  runtime_oscillator.rs
examples/plugin/: Cargo.toml  README.md  bundle.sh
examples/plugin/crates/dsp/: Cargo.toml
examples/plugin/crates/dsp/src/: graph_script.rs  lib.rs
examples/plugin/crates/plugin/: Cargo.toml
examples/plugin/crates/plugin/src/: clack_entry.rs  editor.rs  lib.rs  params.rs  plugin.rs  shared.rs
examples/plugin/ui/: index.html
resource_manager_server/: all.html  index.html
resource_vfs_demo/: fn.main.html  index.html
scripts/: dev-all.sh  dev-resources.sh  dev-web-ui.sh  rebuild-web-ui.sh  rebuild-web-wasm.sh  regen-elementary-ts.sh  sync-elementary.sh
search.index/: 08481bcbf62a.js  1c3b215a067a.js  1d20ac03cce2.js  2b8402b4a942.js  2e450f9c1ba7.js  37f99cc213db.js  389f24188dc7.js  407c2cef45c2.js  616baa1f9bd9.js  6d7af4cb7544.js  7244f242d882.js
src/: audio_ring_buffer.rs  core.rs  engine.rs  error.rs  ffi.rs  graph.rs  lib.rs  logging.rs  main.rs  resource.rs  runtime.rs
tests/: audio_decode.rs  audio_playback.rs  audio_support.rs  dust.rs  extra_convolve.rs  extra_convolve_spectral.rs  frame_bidi_smooth.rs  frame_delay.rs  frame_derivative.rs  frame_phasor.rs  frame_poly_signal.rs  frame_random_walks.rs  frame_scope.rs  frame_select.rs  frame_shaper.rs  frame_smooth.rs  frame_value.rs  frame_write_ram.rs  frameclock.rs  iir_hilbert.rs  rain.rs  ramp00.rs  resource.rs  runtime.rs  sample_count.rs  test-el-helpers.rs  test_dsp.rs  threshold.rs  typed_fast_path.rs
(+1045 files in other folders)
