[package]
name = "elemaudio-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "elemaudio_rs"
path = "src/lib.rs"

[features]
default = []
resources = ["dep:elemaudio-resources"]

[dependencies]
bon = "3.9"
serde_json = "1"
elemaudio-resources = { git = "https://github.com/cristianvogel/elemaudio-resources", package = "elemaudio-resources", optional = true }

[build-dependencies]
cc = "1"
