[package]
name = "elemaudio-rs"
version = "0.2.0"
edition = "2024"
build = "build.rs"
license = "MIT"

[lib]
name = "elemaudio_rs"
path = "src/lib.rs"

[features]
default = []
resources = ["dep:elemaudio-resources"]

[dependencies]
bon = "3.9"
dirs = "6"
log = "0.4"
serde_json = "1"
elemaudio-resources = { git = "https://github.com/cristianvogel/elemaudio-resources", optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
cpal = "0.15"
symphonia = { version = "0.5", default-features = false, features = ["wav", "pcm"] }
