[workspace]
resolver = "2"
members = ["crates/dsp", "crates/plugin"]

[workspace.package]
edition = "2021"
rust-version = "1.93"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
elemaudio-rs = { path = "../.." }
clack-plugin = { git = "https://github.com/prokopyl/clack.git" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", features = [
    "clack-plugin", "audio-ports", "gui", "params", "state", "raw-window-handle_06"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
