[package]
name = "stride-delay-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clack-plugin.workspace = true
clack-extensions.workspace = true
elemaudio-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
raw-window-handle = "0.6"
stride-delay-dsp = { path = "../dsp" }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
wry = "0.55.0"
